--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'BP'
 - !lcsh 'Religions -- Relations'
 - !lcsh 'Bahai Faith -- Relations'
+- GITenberg
 title: One Common Faith
 url: http://www.gutenberg.org/ebooks/19281
